Made the basic layout for the calculator.

--- a/index.html
+++ b/index.html
@@ -21,5 +21,43 @@
       }
     </style>
   </head>
-  <body></body>
+  <body class="h-screen w-screen bg-cyan-50 flex justify-center items-center">
+    <!--CALCULATOR BODY START-->
+    <div class="bg-slate-100 p-5">
+      <form action="" class="flex flex-col justify-center items-center">
+        <!-- FIELD -->
+        <div>
+          <input type="text" />
+        </div>
+        <!-- FIRST ROW OF BUTTONS -->
+        <div>
+          <button>AC</button>
+          <button>DE</button>
+          <button>.</button>
+          <button>/</button>
+        </div>
+        <!-- SECOND ROW OF BUTTONS -->
+        <div>
+          <button>7</button>
+          <button>8</button>
+          <button>9</button>
+          <button>*</button>
+        </div>
+        <!-- THIRD ROW OF BUTTONS -->
+        <div>
+          <button>4</button>
+          <button>5</button>
+          <button>6</button>
+          <button>END--</button>
+        </div>
+        <!-- FOURTH ROW OF BUTTONS -->
+        <div>
+          <button>00</button>
+          <button>0</button>
+          <button>=</button>
+        </div>
+      </form>
+    </div>
+    <!--CALCULATOR BODY END-->
+  </body>
 </html>
