--- a/index.html
+++ b/index.html
@@ -25,45 +25,38 @@
     class="h-screen w-screen bg-gradient-to-br from-[#9ec4db] to-[#2b5979] flex justify-center items-center"
   >
     <!--CALCULATOR BODY START-->
-    <div class="bg-white/40 backdrop-blur-sm p-5">
+    <div class="bg-white/40 backdrop-blur-sm p-5 rounded-lg shadow-2xl">
       <form action="" class="flex flex-col justify-center items-center">
         <!-- FIELD -->
         <div>
           <input type="text" readonly />
         </div>
-        <!-- FIRST ROW OF BUTTONS -->
-        <div>
+
+        <div class="grid grid-cols-4 gap-4">
+          <!-- FIRST ROW OF BUTTONS -->
           <button>AC</button>
           <button>DE</button>
           <button>.</button>
           <button>/</button>
-        </div>
-        <!-- SECOND ROW OF BUTTONS -->
-        <div>
+          <!-- SECOND ROW OF BUTTONS -->
           <button>7</button>
           <button>8</button>
           <button>9</button>
           <button>*</button>
-        </div>
-        <!-- THIRD ROW OF BUTTONS -->
-        <div>
+          <!-- THIRD ROW OF BUTTONS -->
           <button>4</button>
           <button>5</button>
           <button>6</button>
           <button>-</button>
-        </div>
-        <!-- FOURTH ROW OF BUTTONS -->
-        <div>
+          <!-- FOURTH ROW OF BUTTONS -->
           <button>1</button>
           <button>2</button>
           <button>3</button>
           <button>+</button>
-        </div>
-        <!-- FIFTH ROW OF BUTTONS -->
-        <div>
+          <!-- FIFTH ROW OF BUTTONS -->
           <button>00</button>
           <button>0</button>
-          <button>=</button>
+          <button class="col-span-2">=</button>
         </div>
       </form>
     </div>
