--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
             />
             <input
               type="button"
-              value="6"
-              onclick=""
-              class="w-12 h-16 flex items-center justify-center bg-transparent rounded-lg hover:bg-gray-200 duration-200"
+              value="="
+              onclick="display.value = eval(display.value)"
+              class="col-span-2 h-16 flex items-center justify-center bg-transparent rounded-lg hover:bg-gray-300 duration-200"
             />
           </div>
         </form>
