--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- TAILWIND -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="calcicon.png" type="image/x-icon" />
+
     <!-- CSS -->
     <style>
       body {
@@ -165,7 +168,9 @@
             <input
               type="button"
               value="="
-              onclick="display.value = eval(display.value)"
+              onclick="if (eval(display.value)!=undefined){
+                display.value = eval(display.value);
+              }"
               class="col-span-2 h-16 flex items-center justify-center bg-transparent rounded-lg hover:bg-gray-300 duration-200"
             />
           </div>
